--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<form action=""method="post">
 		<label for="name">Name</label>
-		<input type="text" id="name">
+		<input type="text" id="name" required>
 
 		<label for="email">Email</label>
 		<input type="email" id="Name" required>
@@ -20,16 +20,16 @@
 		<input type="radio" id="gender" name="gender" required>
 
 
-		<label for="car brands">Choose Your Car</label>
-		<select  name="Cars" id="cars" required>
+		<label for="cars">Choose Your Car</label>
+		<select  name="cars" id="cars" required>
 			<option>BMW</option>
 			<option>Audi</option>
 			<option>Mercedez</option>
 		</select>
 		
 
-		<label for="car age">Car Age</label>
-		<input type="number" id="car age" min="0" required>
+		<label for="carage">Car Age</label>
+		<input type="number" id="carage" min="0" required>
 
 		<label for="date of purchase">Date of Purchase(dop)</label>
 		<input type="date" id="date of purchase" required>
