--- a/main.html
+++ b/main.html
@@ -31,8 +31,8 @@
 		<label for="carage">Car Age</label>
 		<input type="number" id="carage" min="0" required>
 
-		<label for="date of purchase">Date of Purchase(dop)</label>
-		<input type="date" id="date of purchase" required>
+		<label for="dop">Date of Purchase(dop)</label>
+		<input type="date" id="dop" required>
 
 		<label for="password">Password</label>
 		<input type="password" id="password" required>
