--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<input type="text" id="name" required>
 
 		<label for="email">Email</label>
-		<input type="email" id="Name" required>
+		<input type="email" id="email" required>
 
 		<label for="gender_m">M</label>
 		<input type="radio" id="gender" name="gender" required>
