--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<form action=""method="post">
 		<label for="name">Name</label>
-		<input type="text" id="name" required>
+		<input type="text" id="name">
 
 		<label for="email">Email</label>
 		<input type="email" id="email" required>
@@ -21,7 +21,7 @@
 
 
 		<label for="cars">Choose Your Car</label>
-		<select  name="cars" id="cars" required>
+		<select  name="cars" id="cars">
 			<option>BMW</option>
 			<option>Audi</option>
 			<option>Mercedez</option>
