--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<form action=""method="post">
 		<label for="name">Name</label>
-		<input type="text" id="name">
+		<input type="text" id="name" required>
 
 		<label for="email">Email</label>
 		<input type="email" id="email" required>
